[package]
name = "zero2prod" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Dorian <dorianliu4231@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
tokio = {version = "1", features = ["full"]}